updated population analysis

--- a/lab1_un_population.ipynb
+++ b/lab1_un_population.ipynb
@@ -1810,25 +1810,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'20-24'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[97], line 37\u001b[0m\n\u001b[1;32m     34\u001b[0m     \u001b[39mreturn\u001b[39;00m population_projection\n\u001b[1;32m     36\u001b[0m years_to_project \u001b[39m=\u001b[39m \u001b[39m100\u001b[39m\n\u001b[0;32m---> 37\u001b[0m population_projection \u001b[39m=\u001b[39m project_population(years_to_project)\n",
-      "Cell \u001b[0;32mIn[97], line 20\u001b[0m, in \u001b[0;36mproject_population\u001b[0;34m(years_to_project)\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[39mfor\u001b[39;00m age_group \u001b[39min\u001b[39;00m common_age_groups:\n\u001b[1;32m     19\u001b[0m     fertility_rate \u001b[39m=\u001b[39m fertility_rate_df\u001b[39m.\u001b[39mloc[fertility_rate_df[\u001b[39m\"\u001b[39m\u001b[39mYear\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m==\u001b[39m latest_year, age_group]\u001b[39m.\u001b[39miloc[\u001b[39m0\u001b[39m]\n\u001b[0;32m---> 20\u001b[0m     female_population_age_group \u001b[39m=\u001b[39m projected_female_pop[age_group]\n\u001b[1;32m     21\u001b[0m     births \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m fertility_rate \u001b[39m*\u001b[39m female_population_age_group\n\u001b[1;32m     23\u001b[0m \u001b[39m# Calculate the number of boys and girls using the boys/girls ratio\u001b[39;00m\n",
-      "File \u001b[0;32m~/Desktop/DIscrete Modelling/.venv/lib/python3.11/site-packages/pandas/core/series.py:1007\u001b[0m, in \u001b[0;36mSeries.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   1004\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_values[key]\n\u001b[1;32m   1006\u001b[0m \u001b[39melif\u001b[39;00m key_is_scalar:\n\u001b[0;32m-> 1007\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_get_value(key)\n\u001b[1;32m   1009\u001b[0m \u001b[39mif\u001b[39;00m is_hashable(key):\n\u001b[1;32m   1010\u001b[0m     \u001b[39m# Otherwise index.get_value will raise InvalidIndexError\u001b[39;00m\n\u001b[1;32m   1011\u001b[0m     \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m   1012\u001b[0m         \u001b[39m# For labels that don't resolve as scalars like tuples and frozensets\u001b[39;00m\n",
-      "File \u001b[0;32m~/Desktop/DIscrete Modelling/.venv/lib/python3.11/site-packages/pandas/core/series.py:1116\u001b[0m, in \u001b[0;36mSeries._get_value\u001b[0;34m(self, label, takeable)\u001b[0m\n\u001b[1;32m   1113\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_values[label]\n\u001b[1;32m   1115\u001b[0m \u001b[39m# Similar to Index.get_value, but we do not fall back to positional\u001b[39;00m\n\u001b[0;32m-> 1116\u001b[0m loc \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mindex\u001b[39m.\u001b[39;49mget_loc(label)\n\u001b[1;32m   1118\u001b[0m \u001b[39mif\u001b[39;00m is_integer(loc):\n\u001b[1;32m   1119\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_values[loc]\n",
-      "File \u001b[0;32m~/Desktop/DIscrete Modelling/.venv/lib/python3.11/site-packages/pandas/core/indexes/range.py:349\u001b[0m, in \u001b[0;36mRangeIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    347\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(key) \u001b[39mfrom\u001b[39;00m \u001b[39merr\u001b[39;00m\n\u001b[1;32m    348\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(key, Hashable):\n\u001b[0;32m--> 349\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(key)\n\u001b[1;32m    350\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_check_indexing_error(key)\n\u001b[1;32m    351\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(key)\n",
-      "\u001b[0;31mKeyError\u001b[0m: '20-24'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def project_population(years_to_project):\n",
     "    # Start with the initial population data for the year 2005\n",
@@ -1865,8 +1849,8 @@
     "    \n",
     "    return population_projection\n",
     "\n",
-    "years_to_project = 100\n",
-    "population_projection = project_population(years_to_project)\n"
+    "# years_to_project = 100\n",
+    "# population_projection = project_population(years_to_project)\n"
    ]
   }
  ],
